Issue #10180: Pickling file objects is now explicitly forbidden, since unpickling them produced nonsensical results.